@@ -2,7 +2,6 @@
 # You can redistribute it and/or modify it under the Ruby's license or the GPL2.
 
 class MainWindow < NSWindow
-  
   def initialize
     @handlermap = {}
   end
